Fixes after initial merge.